2011-10-13  Ojan Vafai  <ojan@chromium.org>

        Make filter-build-webkit exit 1 if the build fails.
        https://bugs.webkit.org/show_bug.cgi?id=70080

        Reviewed by Eric Seidel.

        This only works if you redirect stderr to stdout, but it at least makes it possible.
        This is useful if you want to run a followup command (e.g. run-webkit-tests) but
        only if the build succeeds.

        * Scripts/filter-build-webkit:

2011-10-13  Dimitri Glazkov  <dglazkov@chromium.org>

        land-cowboy should at least check style.
        https://bugs.webkit.org/show_bug.cgi?id=70073

        Reviewed by Adam Barth.

        * Scripts/webkitpy/tool/commands/download.py: Added CheckStyle step to LandCowboy command.

2011-10-13  Tony Chang  <tony@chromium.org>

        fix regex in layout test times dashboard
        https://bugs.webkit.org/show_bug.cgi?id=70059

        This fixes the treemapfocus query param.

        Reviewed by Ojan Vafai.

        * TestResultServer/static-dashboards/treemap.html:

2011-10-13  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=70050
        DRT and WRT should have HiDPI testing capabilities

        Reviewed by Darin Adler.

        New layoutTestController function setBackingScaleFactor takes a double for a scale 
        factor and a callback function to call once the backing scale factor has 
        successfully been set for the view.
        * DumpRenderTree/LayoutTestController.cpp:
        (setBackingScaleFactorCallback):
        (LayoutTestController::staticFunctions):

        On Mac, setBackingScaleFactor calls WebView _setCustomBackingScaleFactor. Other 
        platforms do nothing.
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setBackingScaleFactor):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setBackingScaleFactor):